crates/codegen/language/tests/src/fail/references/version_not_found/test.stderr
error: Version '3.0.0' does not exist in the language definition.
  --> src/fail/references/version_not_found/test.rs:17:83
   |
17 |                         field_1 = Optional(kind = Terminal([Two]), enabled = From("3.0.0")),
   |                                                                                   ^^^^^^^
